# sst-benchmark

./: .gitignore  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  sweep.py
config/: .gitignore  sst-check_picky.m4
src/: .gitignore
src/sst/: Makefile.am
src/sst/benchmark/: Makefile.am  Worker.cc  Worker.h  benchmark.py
